--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Waterfall/POR/POR.md
 Waterfall/POR/.ipynb_checkpoints/
 Waterfall/FINALSHIPVPOR/.ipynb_checkpoints/
 Waterfall/SHIPMENT/Ship_DataSource_Rev04_Auto_Update.xlsb
+Waterfall/POR/Compile and clean.ipynb
 # Ignore Exposure Simulator Files
 Exposure Simulator/BOM Sample Files/
 Exposure Simulator/BRD/
